--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -36,18 +36,18 @@ p{
 	}
 }
 
-
+ul, ol {
+    margin-left: 0px;
+}
 /* Portrait and Landscape */
 @media (min-width: 320px) and (max-width: 767px) { 
 
-
-
   .intro{
-
+   margin-left: -15px;
   h2 {
     color: black;
     display: block;
-    font: bold vmax Helvetica;
+    font: bold 12vmax Helvetica;
     text-transform: uppercase;
     letter-spacing: -1px;
     padding: 50px;
@@ -118,6 +118,7 @@ position:absolute;
 #npTitle {
 padding:21px;
 }
+
 
 #plList li {
 cursor:pointer;
