--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -47,7 +47,7 @@ ul, ol {
   h2 {
     color: black;
     display: block;
-    font: bold 8vmax Helvetica;
+    font: bold 59px Helvetica;
     text-transform: uppercase;
     letter-spacing: -1px;
     padding: 50px;
